--- a/Rapport/1Chapters/2Requirements/Requirements.tex
+++ b/Rapport/1Chapters/2Requirements/Requirements.tex
@@ -45,7 +45,8 @@ Lastly the compressor must distort less than clipping because a limiter could ju
 \end{enumerate}
 \end{itemize}
 
-The requirements of this chapter will be the basis for the final system.
+This conlcudes all the requirements for the system to be designed and implemented, fullfilling the problemstatement. 
+%The requirements of this chapter will be the basis for the final system.
 %\todo[inline]{REFERENCER I CHAPTER}
 
 % \begin{itemize}
