added new file tp RMS main

--- a/Rapport/1Chapters/RMS/RMSMAIN.tex
+++ b/Rapport/1Chapters/RMS/RMSMAIN.tex
@@ -32,4 +32,6 @@ In order to decrease to signal level in the lower bands a compressor will be use
 
 \input{1Chapters/RMS/Design.tex}
 
+\input{1Chapters/RMS/releaseTime.tex}
+
 %\input{1Chapters/RMS/Simulation.tex}
