--- a/Rapport/1Chapters/4DesignRealization/designRealization.tex
+++ b/Rapport/1Chapters/4DesignRealization/designRealization.tex
@@ -1,16 +1,15 @@
 \chapter{Design Realization} \label{ch:designRealization}
-As the requirements are derived and the development platform is chosen, the system presented in \autoref{ch:overview} may be designed. Evaluating the concept design from \autoref{ch:overview} it is seen that the concept has four bands-pass filters and one high-pass that need to be designed. 
+As the requirements are derived and the development platform is chosen, the system presented in \autoref{ch:overview} may be designed. Evaluating the concept design from \autoref{ch:overview} it is seen that the concept has four bands-pass filters and one high-pass that needs to be designed. 
 \begin{figure}[H]
 \centering
 \tikzsetnextfilename{SystemOverview}
 \scalebox{0.8}{
 \input{figures/MainSystemOverview.tex}}
-\caption{Block overview of the entire system. Black boxes are not static non changeable variable. Grey boxes are also static but has to be taken into account.}
+\caption{Block overview of the entire system.}
 \label{fig:SystemOverview2}
 \end{figure}
 %\section{Practical Design Considerations}
-Before designing the band-pass filters, RMS analysis, and compressor, practical design considerations needs to be considered. This is necessary since the concept system may not be realizable due to to hardware constraints. Therefore this chapter will cover the In this section following topics will be covered:
-
+Before designing the band-pass filters, RMS analysis, and compressor, practical design considerations needs to be considered. This is necessary since the concept system may not be realizable due to to hardware constraints. Therefore this chapter will cover this and in the following sections the topics covered will be:
 \begin{itemize}
 \item[•] Phase response and group delay.
 \item[•] Computational constraints.
@@ -21,7 +20,7 @@ Before designing the band-pass filters, RMS analysis, and compressor, practical 
 \section{Phase response and group delay}
 As the signal needs to be reconstructed in the end of the system, it is desirable that the reconstructed signal do not have frequency bands which are out of phase compared to the original input signal. If the bands are out of phase the resulting sound may be unpleasant to listen to. Therefore a design requirement to the system is to ensure that the signals from each band are added together without changing the relative phase between each band.
 
-One of properties in non-statical filters such as low-pass and band-pass filters are the phase shift. For a filters such as the Butterworth low-pass filter, the phase shift begins at the frequency at one decade below the cutoff frequency and ends one decade above. The phase shift in-between for most analog filter except Bessel filter, have a non-linear phase response. Because of the phase response is non-linear, the group-delay will likewise not be linear as seen in \autoref{fig:groupDelayIirPrev}.
+One of the properties in non-statical filters such as low-pass and band-pass filters are the phase shift. For filters such as the Butterworth low-pass filter, the phase shift begins at the frequency at one decade below the cutoff frequency and ends one decade above. The phase shift in-between for most analog filter except Bessel filter, have a non-linear phase response. Because the phase response is non-linear, the group-delay will likewise not be linear as seen in \autoref{fig:groupDelayIirPrev}.
 
 \begin{figure}[H]
 \centering
@@ -36,23 +35,25 @@ One of properties in non-statical filters such as low-pass and band-pass filters
 	\caption{Group delay of a 50th order FIR filter.}
 	\label{fig:groupDelayFirPrev}
 \end{subfigure}
-\caption{Group delay of IIR and FIR filter.}
+\caption{Example of group delay of an IIR and a FIR filter.}
 \label{fig:filterGroupDelay}
 \end{figure}
 
-The group delay is an important parameter to take into account, as it specifies the sample delay for each frequencies. 1 sample delay is equivalent to 20.83 $\mu$s in a 48 kHz system. \autoref{fig:groupDelayIirPrev} shows that the group delay for IIR filters is non-linear with a peak at the normalized frequency 0.25 $\pi rad$. To calculate the time delay at 0.25 $\pi$ rad following expression can be used:
-
+The group delay is an important parameter to take into account, as it specifies the sample delay for each frequency. 1 sample delay is equivalent to 20.83 $\mu$s in a 48 kHz system. \autoref{fig:groupDelayIirPrev} shows that the group delay for IIR filters is non-linear with a peak at the normalized frequency 0.25 $\pi rad$. To calculate the time delay at 0.25 $\pi$ rad following expression can be used:
 \begin{equation}
-t_{d}= \frac{n_{s}}{f_s}
+t_{d}= \frac{n_{s}}{F_s} \enhed{s}
 \end{equation}
+\begin{where}
+\va{$n_{s}$}{is the number of samples delayed}{.}
+\end{where}
 
-Where $n_{s}$ is the number of samples delayed and $f_s$ is the sampling rate. A non-linear group delay will be hard to compensate compared to a constant group delay, thus a constant group delay is desirable. To achieve a constant group delay a linear phase filter needed as the phase response is linear. Linear phase can be found in FIR filters and Bessel filters. Because of the constant group delay in linear phase filter, it eases the design as constant delays can be implemented to compensate the phase shift in filters. Because the Bessel filter do not have a very sharp cutoff compared to other filter types, a high order Bessel filter will be needed. A high order IIR however has risk of being unstable. FIR filters are therefore chosen as they have all the required properties and do not get unstable.
+A non-linear group delay will be hard to compensate compared to a constant group delay, thus a constant group delay is desirable. To achieve a constant group delay a linear phase filter is needed as the phase response is linear. Linear phase can be found in FIR filters and Bessel filters. Because of the constant group delay in linear phase filter, it eases the design as constant delays can be implemented to compensate the phase shift in filters. Because the Bessel filter do not have a very sharp cutoff compared to other filter types, a high order Bessel filter will be needed. A high order IIR however has risk of being unstable. FIR filters are therefore chosen as they have all the required properties and do not get unstable. \todo[inline]{Bessel har ikke totalt konstant group delay. ellers skal man nok skrive hvad den dæmpning er pr decade}
 
 
 \section{Computational Constraints}
-Another subject to consider is the constraints regarding computational power to perform filter algorithms. For FIR filters the amount of instructions to compute the filter output increases by the filter order, as calculating each tap in the filter is equal to a multiply and accumulate. Therefore even though a very high order filter in theory is realizable, the computational constraint needs to be considered. 
+Another subject to consider is the constraints regarding computational power to perform filter algorithms. For FIR filters the amount of instructions to compute the filter output increases by the filter order, as calculating each tap in the filter is equal to a multiply and accumulate. Therefore eventhough a very high order filter in theory is realizable, the computational constraint needs to be considered. 
 
-The performance of the DSP is 100 MIPS. At a sample rate of 48 kHz, this will result in approximately 2083 instructions available in-between each sample. A 10000 order FIR filter for instance is thus not realizable on the platform with a sampling rate on 48 kHz as the DSP will not finish calculating the filter output in time before next sample. This is true because the fastest way to compute the convolution between the input signal x[n] and the impulse response h[n] is by using a Multiply-Accumulate (MAC) instruction which takes 1 clock cycle to perform if a single MAC is used. This gives a total number of 10000 clock cycles to perform one single convolution. Designing FIR filters will therefore be difficult as the cutoff frequencies for all required filters are very low relative to the sampling rate. A cutoff frequency located far from the sampling rate results in a long impulse response for a FIR filter. To a achieve a steep cut more samples of the impulse response are needed thus increasing the order of the filter. 
+The performance of the DSP is 100 MIPS. At a sample rate of 48 kHz, this will result in approximately 2083 instructions available in-between each sample. A 10000 order FIR filter for instance is thus not realizable on the platform with a sampling rate of 48 kHz as the DSP will not finish calculating the filter output in time before the next sample. This is true because the fastest way to compute the convolution between the input signal x[n] and the impulse response h[n] is by using a Multiply-Accumulate (MAC) instruction which takes 1 clock cycle to perform if a single MAC is used. This gives a total number of 10000 clock cycles to perform one single convolution. Designing FIR filters will therefore be difficult as the cutoff frequencies for all required filters are very low relative to the sampling rate. A cutoff frequency located far from the sampling rate results in a long impulse response for a FIR filter. To a achieve a steep cut more samples of the impulse response are needed thus increasing the order of the filter. 
 
 \section{Multirate Signal Processing with Multistages}
 A solution to avoid very high order filters is to downsample the signal into a signal with a lower sampling rate. By downsampling the signal the impulse response of an equivalent FIR filter at the same cutoff frequency is shortened and the amount of taps is therefore reduced. In \autoref{fig:downsample_FIR} it is shown how decreasing the sampling rate by a integer factor of L is equivalent to increasing the cutoff frequency by a factor of L.
@@ -64,11 +65,11 @@ A solution to avoid very high order filters is to downsample the signal into a s
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.75\textwidth]{figures/downsample_FIR.pdf}
-\caption{}
+\caption{Frequency spectrum of a signal with different sampling frequencies.}
 \label{fig:downsample_FIR}
 \end{figure}
 
-An example of how to reduce the order of the FIR filter by multirate is shown in \autoref{fig:fir_downsample}. \autoref{fig:fir_downsample1} is a 100 order FIR filter with a sampling frequency of 48 kHz and cutoff frequency at $\frac{fs}{10}$ and \autoref{fig:fir_downsample1} is a 50 order FIR filter with a sampling frequency of 24 kHz and cutoff frequency at $\frac{fs}{5}$. A Hanning window function is applied to both filters' impulse response. 
+An example of how to reduce the order of the FIR filter by multirate is shown in \autoref{fig:fir_downsample}. \autoref{fig:fir_downsample1} is a 100 order FIR filter with a sampling frequency of 48 kHz and cutoff frequency at $\frac{fs}{10}$ and \autoref{fig:fir_downsample2} is a 50 order FIR filter with a sampling frequency of 24 kHz and cutoff frequency at $\frac{fs}{5}$. A Hanning window function is applied to both filters' impulse response. 
 
 \begin{figure}[H]
 \centering
@@ -83,14 +84,14 @@ An example of how to reduce the order of the FIR filter by multirate is shown in
 	\caption{Frequency response of a FIR filter at $\frac{f_s}{2}$ with half the order.}
 	\label{fig:fir_downsample2}
 \end{subfigure}
-\caption{}
+\caption{Frequency response of two different FIR filters at different sampling frequencies.}
 \label{fig:fir_downsample}
 \end{figure}
 
-It is seen that the attenuation at the top of the first side lope is -43.97 dB for both filters, thus the frequency response of both are the same at $0 \leq f \leq 24 \text{kHz}$. Because the frequency bands for the multi-band compressor are placed low, a multirate system will be implemented into the system as this helps decreasing the filter orders.
+It is seen that the attenuation at the top of the first side lope is -43.97 dB for both filters, thus the frequency response of both are the same at $0 \leq f \leq 24 \text{kHz}$. Because the frequency bands for the multi-band compressor are placed low, a multirate system will be implemented into the system as this helps decreasing the filter orders significantly.
 
 \subsection*{Avoiding Aliasing when Downsampling}
-To downsample however requires an anti-aliasing filter to avoid aliasing as seen in \autoref{fig:aliasing}. The bandwidth of the audio signal is assumed to be 0 Hz to 20 kHz at a sampling rate of 48 kHz. The anti-aliasing filter has two requirements. The  cutoff frequency should be low enough to limit the bandwidth and the order should be high enough to provide enough attenuation at the new sampling rate's at $\frac{f_s}{2}$. 
+To downsample however requires an anti-aliasing filter to avoid aliasing as seen in \autoref{fig:aliasing}. The bandwidth of the audio signal is assumed to be 0 Hz to 20 kHz at a sampling rate of 48 kHz. The anti-aliasing filter has two requirements. The cutoff frequency should be low enough to limit the bandwidth and the order should be high enough to provide enough attenuation at the new sampling rate's at $\frac{F_s}{2}$. 
 
 \begin{figure}[H]
 \centering
@@ -122,7 +123,7 @@ To downsample however requires an anti-aliasing filter to avoid aliasing as seen
 \end{figure}
 
 % Same number of taps required
-If a high downsampling factor, L, is desired, then the order of the anti-aliasing will necessarily get bigger. A rule of thumb is the attenuation at $\frac{f_s}{2L}$ is approximately -60 dB, since an ideal brick wall low-pass filter is not realizable. As the frequency bands for the system is located at the lower spectrum, a high order anti-aliasing filter is needed to downsample the signal. As a high order anti-aliasing filter is not desirable, the downsampling is performed in multistages to ease the amount of computation. If the downsampling is performed with factor of 2 each time, then the total amount of computation needed to perform the filter algorithm for all stages is given as a geometric series:
+If a high downsampling factor, L, is desired, then the order of the anti-aliasing filters will necessarily get bigger. A rule of thumb is the attenuation at $\frac{f_s}{2L}$ should approximately be -60 dB, since an ideal brick wall low-pass filter is not realizable. As the frequency bands for the system is located at the lower spectrum, a high order anti-aliasing filter is needed to downsample the signal. As a high order anti-aliasing filter is not desirable, the downsampling is performed in multistages to ease the amount of computation. If the downsampling is performed with factor of 2 each time, then the total amount of computation needed to perform the filter algorithm for all stages is given as a geometric series:
 
 \begin{equation} \label{eq:z_transformation_example}
 \sum_{k=0}^{\infty}M \left( \frac{1}{2} \right)^k  = \frac{M}{1-\frac{1}{2}} = 2M
@@ -130,7 +131,7 @@ If a high downsampling factor, L, is desired, then the order of the anti-aliasin
 
 By doing so the filter order for each anti-aliasing filter is kept low as the cutoff frequency of each band is closer to the sampling frequency. Also, the whole bandwidth of the audio signal is split into octave bands which is an advantages if an equalizer and spectrum analyser are desired.
 
-
+\todo[inline]{Upsampling is not discussed or mentioned anywhere?}
 
 
 % Løsning:
@@ -141,7 +142,7 @@ By doing so the filter order for each anti-aliasing filter is kept low as the cu
 
 % Example downsample in 4 multistages vs 1 downsampling stage
 
-Applying the considerations to the system, following new overall system may be presented.
+Applying the considerations to the system, the following new overall system may be presented.
 
 \begin{figure}[H]
 \centering
@@ -149,6 +150,8 @@ Applying the considerations to the system, following new overall system may be p
 \caption{Overall system with practical considerations.}
 \label{fig:designRealBlock}
 \end{figure}
+
+\todo[inline]{figur er forkert!}
 
 In comparison to previous system overview decimation, "HP and Decimator" and "interpolator" blocks are added to the system. The design of these blocks including the RMS and model will discussed in following sections.
 
