Skrevet til appendix

--- a/Rapport/1Chapters/1Preanalysis/hit_detection.tex
+++ b/Rapport/1Chapters/1Preanalysis/hit_detection.tex
@@ -26,16 +26,16 @@ As previously stated, it is possible that the loudspeaker coil hits the back pla
 
 %\textbf{The same window is applied to all datasets for the driver and afterwards spectrum analysed to reveal any increase in low frequent energy.}
 
-\begin{figure}[H]
-\centering
-\tikzsetnextfilename{FFT_hit}
-\input{figures/FFT_hit.tex}
-\label{fig:FFT_hit}
-\caption{The spectrum of the window. The black graph is dataset 1, blue is 10 and red is 19.}
-\label{fig:FFT_hit}
-\end{figure}
+%\begin{figure}[H]
+%\centering
+%\tikzsetnextfilename{FFT_hit}
+%\input{figures/FFT_hit.tex}
+%\label{fig:FFT_hit}
+%\caption{The spectrum of the window. The black graph is dataset 1, blue is 10 and red is 19.}
+%\label{fig:FFT_hit}
+%\end{figure}
 
-\todo[inline]{FIGUR FEJL? fft detaljer mangler}
+%\todo[inline]{FIGUR FEJL? fft detaljer mangler}
 
 It is seen that the energy for non-harmonic frequencies is increased at very low frequencies as indicated with the arrow. The black graph is the first dataset and the blue is the tenth dataset. As no hit was observed in the window at dataset 1 and 10, the energy of lower part of the spectrum was not increased. However the suspected hit in dataset 19 has an energy increase in the low frequency spectrum. Note that since the window is 0.25 seconds wide, frequencies below 4 Hz should be discarded.
 
