--- a/Rapport/2Appendix/AcceptFrequencyResponse.tex
+++ b/Rapport/2Appendix/AcceptFrequencyResponse.tex
@@ -2,10 +2,10 @@
 The purpose of this test is verify requirement \textbf{XX} concerning the linearity of the frequence responce of the system.
 
 \section{Setup}
-The setup of this test are depicted in \textbf{XX}, where the equipment is catalogued in \textbf{XX}, and described as follows:
+The setup of this test are depicted in \autoref{fig:AcceptFreqResponse}, where the equipment is catalogued in tab:UsedEquipmentFreqResponse, and described as follows:
 
 \begin{itemize}
-\item Frequency reponse will be measured by a Harmonie analyzer.
+\item Frequency response will be measured by a Harmonie analyzer.
 \item A noise generator will generate the following for the test. 
 \begin{itemize}
 \item Sampling frequency: 48000 Hz.
