--- a/Rapport/1Chapters/4DesignRealization/designRealization.tex
+++ b/Rapport/1Chapters/4DesignRealization/designRealization.tex
@@ -115,7 +115,7 @@ To downsample however requires an anti-aliasing filter to avoid aliasing as seen
 \hspace{6mm} 
 \begin{subfigure}[b]{0.47\textwidth}
 \includegraphics[width=\linewidth]{aliasing4}
-	\caption{Downsampling no longer occurs.}
+	\caption{Aliasing at downsampling no longer occurs.}
 	\label{fig:aliasing4}
 \end{subfigure}
 \caption{A anti-aliasing filter needs to applied to reduce the bandwidth to avoid aliasing when downsampling.}
@@ -168,12 +168,12 @@ A decimator is, as previously mentioned, a subsystem consisting of an anti-alias
 \label{fig:designRealDecimator}
 \end{figure}
 
-A great advantage of using this technique rather than designing a mirror filter, is the algorithm to perform it, is only a subtraction. To apply spectral inversion, a delay of the input signal before subtraction is required. This is due to the delay of the anti-aliasing filter.
+A great advantage of using this technique rather than designing a mirror filter/highpass filter, is the algorithm to perform it, which is only a subtraction. To apply spectral inversion, a delay of the input signal before subtraction is required. This is due to the delay of the anti-aliasing filter.
 
 
 \section{Interpolator}
 
-Opposite to the decimator is the interpolator. As it is desired to reconstruct the signal, upsampling is applied to the downsampled signal. To upsample the downsampled signal, zero-padding is applied to the signal. Since the upsampling factor is 2, a zero is added in-between each sample. This adds high frequency components which is then filtered by using a low-pass filter. The does not need to be the same filter as the anti-aliasing filter. The requirement for the upsampling filter is that the attenuation at $\frac{f_s}{2}$ of the zero-padded signal is high enough e.g. -60 dB. The block diagram of the interpolator is seen in \autoref{fig:designRealInterpolator}.
+Opposite to the decimator is the interpolator. As it is desired to reconstruct the signal, upsampling is applied to the downsampled signal. To upsample the downsampled signal, zero-padding is applied to the signal. Since the upsampling factor is 2, a zero is added in-between each sample. This adds high frequency components which is then filtered by using a low-pass filter. This does not need to be the same filter as the anti-aliasing filter in the decimator. The requirement for the upsampling filter is that the attenuation at $\frac{f_s}{2}$ of the zero-padded signal is high enough e.g. -60 dB. The block diagram of the interpolator is seen in \autoref{fig:designRealInterpolator}.
 
 \begin{figure}[H]
 \centering
@@ -202,7 +202,7 @@ To design a RMS limiter, a RMS analysis and a mathematical function of the gain 
 
 \section{Complete system}
 
-The RMS limiter cannot protect the loudspeaker against transients such as kick drums and short spikes with high amplitude due to the small attack time in the RMS calculation. To avoid potential damage, a peak limiter is inserted in the upsampled 530 Hz band. The threshold of this limiter is set very high, as the main purpose it to protect the loudspeaker at cases where the RMS-limiter is not fast enough to respond. Another RMS-limiter is inserted in the upsampled 530 band. Because the signal is split into 4 bands, the 530 Hz band RMS-limiter ensures that the sum of all 4 bands do not exceed the threshold.
+The RMS limiter cannot protect the loudspeaker against transients such as kick drums and short spikes with high amplitude due to the attack time in the RMS calculation which is not instantanious. To avoid potential damage, a peak limiter is inserted in the upsampled 530 Hz band. The threshold of this limiter is set very high, as the main purpose it to protect the loudspeaker at cases where the RMS-limiter is not fast enough to respond. Another RMS-limiter is inserted in the upsampled 530 band. Because the signal is split into 4 bands, the 530 Hz band RMS-limiter ensures that the sum of all 4 bands do not exceed the threshold.
 
 \begin{figure}[H]
 \centering
@@ -210,5 +210,7 @@ The RMS limiter cannot protect the loudspeaker against transients such as kick d
 \caption{The complete overall system to be designed.}
 \label{fig:designRealBlock}
 \end{figure}
+
+\todo[inline]{FIGUR FORKERT}
 
 The complete system is now explained and each subsystem of the system may now be designed in the following chapters.
